# cgi-satellites

./: CMakeLists.txt  README
googletest/googletest/msvc/2010/: gtest-md.vcxproj
satellites.computation/include/: timeslots.hpp
satellites.computation/src/: timeslots.cpp
satellites.misc/include/: misc.hpp
satellites.misc/src/: misc.cpp
satellites.test/: CMakeLists.txt
satellites.test/include/: main.hpp
satellites.test/src/: main.cpp  test-computation.cpp  test-misc.cpp
satellites.ui/src/: main.cpp
